# game_of_life

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
GameOfLife/: Application.cpp  Application.h  Camera.cpp  CameraController.cpp  CameraController.h  Events.cpp  Events.h  Framebuffer.cpp  Framebuffer.h  Layer.h  LayerManager.cpp  LayerManager.h  Main.cpp  OpenGLContext.cpp  OpenGLContext.h  Random.cpp  Shader.cpp  Shader.h  TemporaryRenderer.cpp  TemporaryRenderer.h  Window.cpp  Window.h  WindowContext.cpp  WindowContext.h
GameOfLife/Layers/: GameOfLife.cpp  GameOfLife.h  GameOfLifeSetup.cpp  GameOfLifeSetup.h  SandboxLayer.cpp  SandboxLayer.h  UILayer.cpp  UILayer.h
src/: Main.cpp
src/Core/: Application.cpp  Application.h  Events.h  Layer.h  LayerManager.cpp  LayerManager.h  Window.cpp  Window.h
src/GameOfLife/: CameraController.cpp  CameraController.h  GameOfLife.cpp  GameOfLife.h  GameOfLifeSetup.cpp  GameOfLifeSetup.h  Random.h
src/Renderer/: Camera.cpp  Camera.h  OpenGLContext.cpp  OpenGLObjects.cpp  OpenGLObjects.h  Renderer.cpp  Renderer.h  Shader.h
